Changed majority of JPA to JDBC