@@ -6,7 +6,6 @@ import gov.cdc.dataprocessing.constant.elr.EdxELRConstant;
 import gov.cdc.dataprocessing.constant.elr.NEDSSConstant;
 import gov.cdc.dataprocessing.constant.enums.ObjectName;
 import gov.cdc.dataprocessing.exception.DataProcessingException;
-import gov.cdc.dataprocessing.exception.RtiCacheException;
 import gov.cdc.dataprocessing.model.container.base.BasePamContainer;
 import gov.cdc.dataprocessing.model.container.model.*;
 import gov.cdc.dataprocessing.model.dto.act.ActIdDto;
@@ -87,7 +86,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
     }
 
     public Object autoCreateInvestigation(ObservationContainer observationVO,
-                                          EdxLabInformationDto edxLabInformationDT) throws DataProcessingException, RtiCacheException {
+                                          EdxLabInformationDto edxLabInformationDT) throws DataProcessingException {
         PageActProxyContainer pageActProxyContainer = null;
         PamProxyContainer pamProxyVO = null;
         PublicHealthCaseContainer phcVO= createPublicHealthCaseVO(observationVO, edxLabInformationDT);
@@ -143,7 +142,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
                                              Collection<PersonContainer> personVOCollection,
                                              ObservationContainer rootObservationVO,
                                              Collection<Object> entities,
-                                             Map<Object, Object> questionIdentifierMap) throws DataProcessingException, RtiCacheException {
+                                             Map<Object, Object> questionIdentifierMap) throws DataProcessingException {
         PersonContainer patientVO;
         boolean isOrgAsReporterOfPHCPartDT=false;
         boolean isPhysicianOfPHCDT=false;
@@ -266,7 +265,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
         }
     }
 
-    private PublicHealthCaseContainer createPublicHealthCaseVO(ObservationContainer observationVO, EdxLabInformationDto edxLabInformationDT) throws DataProcessingException, RtiCacheException {
+    private PublicHealthCaseContainer createPublicHealthCaseVO(ObservationContainer observationVO, EdxLabInformationDto edxLabInformationDT) throws DataProcessingException {
         PublicHealthCaseContainer phcVO = new PublicHealthCaseContainer();
 
         phcVO.getThePublicHealthCaseDto().setLastChgTime(new java.sql.Timestamp(new Date().getTime()));
@@ -284,7 +283,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
         var res = conditionCodeRepository.findProgramAreaConditionCodeByConditionCode(edxLabInformationDT.getConditionCode());
         ConditionCodeWithPA programAreaVO = new ConditionCodeWithPA();
         if (res.isPresent()) {
-            programAreaVO = res.get().get(0);
+            programAreaVO = res.get().getFirst();
         }
         phcVO.getThePublicHealthCaseDto().setCd(programAreaVO.getConditionCd());
         phcVO.getThePublicHealthCaseDto().setProgAreaCd(programAreaVO.getStateProgAreaCode());
@@ -320,17 +319,14 @@ public class AutoInvestigationService implements IAutoInvestigationService {
         phcVO.setItNew(true);
         phcVO.setItDirty(false);
 
-        try{
-            boolean isSTDProgramArea = cacheApiService.getSrteCacheBool(ObjectName.CHECK_PAI_FOR_STD_OR_HIV.name(), phcVO.getThePublicHealthCaseDto().getProgAreaCd());
-            if (isSTDProgramArea) {
-                CaseManagementDto caseMgtDT = new CaseManagementDto();
-                caseMgtDT.setPublicHealthCaseUid(phcVO.getThePublicHealthCaseDto().getPublicHealthCaseUid());
-                caseMgtDT.setCaseManagementDTPopulated(true);
-                phcVO.setTheCaseManagementDto(caseMgtDT);
-            }
-        } catch(Exception ex){
-            throw new DataProcessingException("Unexpected exception setting CaseManagementDto to PHC -->" +ex);
+        boolean isSTDProgramArea = cacheApiService.getSrteCacheBool(ObjectName.CHECK_PAI_FOR_STD_OR_HIV.name(), phcVO.getThePublicHealthCaseDto().getProgAreaCd());
+        if (isSTDProgramArea) {
+            CaseManagementDto caseMgtDT = new CaseManagementDto();
+            caseMgtDT.setPublicHealthCaseUid(phcVO.getThePublicHealthCaseDto().getPublicHealthCaseUid());
+            caseMgtDT.setCaseManagementDTPopulated(true);
+            phcVO.setTheCaseManagementDto(caseMgtDT);
         }
+
 
         return phcVO;
     }
@@ -358,10 +354,10 @@ public class AutoInvestigationService implements IAutoInvestigationService {
             {
 
                 List<ObsValueNumericDto> obsValueNumList = new ArrayList<>(obs.getTheObsValueNumericDtoCollection());
-                String value = obsValueNumList.get(0).getNumericUnitCd() == null
-                        ? String.valueOf(obsValueNumList.get(0).getNumericValue1())
-                        : obsValueNumList.get(0).getNumericValue1() + "^"
-                        + obsValueNumList.get(0).getNumericUnitCd();
+                String value = obsValueNumList.getFirst().getNumericUnitCd() == null
+                        ? String.valueOf(obsValueNumList.getFirst().getNumericValue1())
+                        : obsValueNumList.getFirst().getNumericValue1() + "^"
+                        + obsValueNumList.getFirst().getNumericUnitCd();
                 prePopMap.put(obs.getTheObservationDto().getCd(), value);
             }
             else if (obs.getTheObsValueDateDtoCollection() != null
@@ -370,7 +366,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
             {
                 List<ObsValueDateDto> obsValueDateList = new ArrayList<>(obs.getTheObsValueDateDtoCollection());
 
-                String value = StringUtils.formatDate(obsValueDateList.get(0).getFromTime());
+                String value = StringUtils.formatDate(obsValueDateList.getFirst().getFromTime());
                 prePopMap.put(obs.getTheObservationDto().getCd(), value);
             }
             else if (obs.getTheObsValueCodedDtoCollection() != null
@@ -379,18 +375,18 @@ public class AutoInvestigationService implements IAutoInvestigationService {
 
                 List<ObsValueCodedDto> obsValueCodeList = new ArrayList<>(obs.getTheObsValueCodedDtoCollection());
 
-                String key = obs.getTheObservationDto().getCd() + "$" + obsValueCodeList.get(0).getCode();
+                String key = obs.getTheObservationDto().getCd() + "$" + obsValueCodeList.getFirst().getCode();
                 if (fromPrePopMap.containsKey(key)) {
-                    prePopMap.put(key, obsValueCodeList.get(0).getCode());
+                    prePopMap.put(key, obsValueCodeList.getFirst().getCode());
                 } else if (fromPrePopMap.containsKey(obs.getTheObservationDto().getCd())) {
-                    prePopMap.put(obs.getTheObservationDto().getCd(), obsValueCodeList.get(0).getCode());
+                    prePopMap.put(obs.getTheObservationDto().getCd(), obsValueCodeList.getFirst().getCode());
                 }
             }
             else if (obs.getTheObsValueTxtDtoCollection() != null && !obs.getTheObsValueTxtDtoCollection().isEmpty()
                     && fromPrePopMap.containsKey(obs.getTheObservationDto().getCd()))
             {
                 for (ObsValueTxtDto obsValueTxtDT : obs.getTheObsValueTxtDtoCollection()) {
-                    if (obsValueTxtDT.getTxtTypeCd() == null || obsValueTxtDT.getTxtTypeCd().trim().equals("")
+                    if (obsValueTxtDT.getTxtTypeCd() == null || obsValueTxtDT.getTxtTypeCd().trim().isEmpty()
                             || obsValueTxtDT.getTxtTypeCd().equalsIgnoreCase("O")) {
                         prePopMap.put(obs.getTheObservationDto().getCd(), obsValueTxtDT.getValueTxt());
                         break;
@@ -520,7 +516,7 @@ public class AutoInvestigationService implements IAutoInvestigationService {
     }
 
     private void createActEntityObject(ParticipationDto partDT, PageActProxyContainer pageActProxyContainer,
-                                       PamProxyContainer pamActProxyVO, Collection<NbsActEntityDto> nbsActEntityDTColl, Collection<ParticipationDto> partColl ) throws DataProcessingException, RtiCacheException {
+                                       PamProxyContainer pamActProxyVO, Collection<NbsActEntityDto> nbsActEntityDTColl, Collection<ParticipationDto> partColl ) throws DataProcessingException {
 
         partDT.setActClassCd(NEDSSConstant.CLASS_CD_CASE);
         if(pageActProxyContainer !=null)
